--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+.App{
+  margin: 3rem 4rem;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App > hr{
+  height: 1px;
+  background-color: #ccc;
+  border: none;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-task-form{
+  margin: 10px 0;
+}
+
+.dropdown-menu>li:hover{
+  cursor: pointer;
+}
+
+.type-sort{
+  margin-left: 1rem;
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.title{
+  font-size: xx-large;
+  font-weight: 400;
+  margin: 0;
+}
+
+.title>span{
+  font-size: large;
+  font-weight: 700;
+  color: darkgray;
+}
+
+.label-level{
+  color: white;
+  font-weight: bold;
+  padding: 1px 10px;
+}
+
+.level-danger{
+  background-color:#dc3545;
+}
+
+.level-info{
+  background-color: skyblue;
+}
+
+.level-default{
+  background-color: grey;
 }
